--- a/frontend/themes/grad-proj/styles.css
+++ b/frontend/themes/grad-proj/styles.css
@@ -4,3 +4,4 @@
 @import url('./views/master-detail-view.css');
 @import url('./views/gridwith-filters-view.css');
 @import url('./views/feed-view.css');
+@import url('./views/faq-view.css');
