--- a/frontend/themes/grad-proj/main-layout.css
+++ b/frontend/themes/grad-proj/main-layout.css
@@ -15,6 +15,19 @@ vaadin-side-nav-item vaadin-icon {
   box-sizing: border-box;
 }
 
+.drawerLayout {
+  width: 56px;
+  transition: width 0.5s;
+  background-color: whitesmoke;
+  background-image: url("https://www.transparenttextures.com/paterns/grunge-wall.png") ;
+}
+
+.drawerLayout:hover {
+  width: 200px;
+}
+
 [slot="drawer"]:is(header, footer):is(:empty) {
   display: none;
 }
+
+
