--- a/frontend/themes/grad-proj/styles.css
+++ b/frontend/themes/grad-proj/styles.css
@@ -6,3 +6,4 @@
 @import url('./views/feed-view.css');
 @import url('./views/faq-view.css');
 @import url('./views/pharmacy-styles.css');
+@import url('views/home.css');
